added hero section

--- a/index.html
+++ b/index.html
@@ -118,9 +118,13 @@
       </div>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+      <section class="hero"></section>
+    </main>
 
-    <footer></footer>
+    <footer>
+      <div class="container"></div>
+    </footer>
 
     <div class="login" id="login">
       <div class="login__container">
