--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li class="header__item header__item--mark">
-              <a href="#" class="header__link">
+              <a href="#">
                 <svg class="header__icon" viewBox="0 0 27 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M13.3819 12.8915C9.28498 12.8915 5.18803 12.8915 1.09108 12.8908C0.961448 12.8908 0.827342 12.8945 0.702176 12.8669C0.25441 12.7686 -0.0480741 12.3372 0.00631347 11.8932C0.060701 11.4484 0.439924 11.1116 0.913021 11.1094C1.98364 11.1034 3.055 11.1064 4.12561 11.1064C11.3234 11.1064 18.5212 11.1072 25.719 11.1087C25.8575 11.1087 26.0013 11.1049 26.1347 11.1362C26.5743 11.2398 26.8641 11.6555 26.8179 12.0921C26.7702 12.5391 26.3947 12.8871 25.9246 12.8893C24.7139 12.8967 23.504 12.893 22.2933 12.893C19.3228 12.893 16.3524 12.893 13.3827 12.893C13.3819 12.893 13.3819 12.8923 13.3819 12.8915Z" />
@@ -119,7 +119,30 @@
     </header>
 
     <main class="main">
-      <section class="hero"></section>
+      <section class="hero">
+        <div class="hero__container container">
+          <ul class="hero__list">
+            <li class="hero__item">
+              <div class="hero__information">
+                <h3 class="hero__subtitle">Welcome to GreenShop</h3>
+                <h1 class="hero__title">
+                  Let’s Make a
+                  Better <span>Planet</span>
+                </h1>
+                <p class="hero__description">
+                  We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to create
+                  an unique Urban
+                  Jungle. Order your favorite plants!
+                </p>
+                <a href="#" class="btn">SHOP NOW</a>
+              </div>
+              <div class="hero__image">
+                <img src="src/images/hero.png" alt="hero" />
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -132,11 +155,11 @@
           <img src="src/icons/close-modal.svg" alt="close modal" />
         </button>
         <div class="login__titles">
-          <a href="#" class="login__title">
-            <h3 class=" login__title--active">Login</h3>
+          <a href="#" class="login__title login__title--active">
+            <h3>Login</h3>
           </a>
           <a href="#" class="login__title">
-            <h3 class="">Register</h3>
+            <h3>Register</h3>
           </a>
         </div>
         <form class="login__form">
