--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
                   Better <span>Planet</span>
                 </h1>
                 <p class="hero__description">
-                  We are an online plant shop offering a wide range of cheap and trendy plants. Use our plants to create
-                  an unique Urban
-                  Jungle. Order your favorite plants!
+                  We are an online plant shop offering a wide range of cheap and trendy plants. <span>Use our plants to
+                    create
+                    an unique Urban
+                    Jungle. Order your favorite plants!</span>
                 </p>
-                <a href="#" class="btn">SHOP NOW</a>
+                <a href="#" class="hero__btn btn">SHOP NOW</a>
               </div>
               <div class="hero__image">
                 <img src="src/images/hero.png" alt="hero" />
