--- a/index.html
+++ b/index.html
@@ -141,6 +141,46 @@
                 <img src="src/images/hero.png" alt="hero" />
               </div>
             </li>
+
+            <li class="hero__item">
+              <div class="hero__information">
+                <h3 class="hero__subtitle">Welcome to GreenShop</h3>
+                <h1 class="hero__title">
+                  Let’s Make a
+                  Better <span>Planet</span>
+                </h1>
+                <p class="hero__description">
+                  We are an online plant shop offering a wide range of cheap and trendy plants. <span>Use our plants to
+                    create
+                    an unique Urban
+                    Jungle. Order your favorite plants!</span>
+                </p>
+                <a href="#" class="hero__btn btn">SHOP NOW</a>
+              </div>
+              <div class="hero__image">
+                <img src="src/images/hero-2.png" alt="hero" />
+              </div>
+            </li>
+
+            <li class="hero__item">
+              <div class="hero__information">
+                <h3 class="hero__subtitle">Welcome to GreenShop</h3>
+                <h1 class="hero__title">
+                  Let’s Make a
+                  Better <span>Planet</span>
+                </h1>
+                <p class="hero__description">
+                  We are an online plant shop offering a wide range of cheap and trendy plants. <span>Use our plants to
+                    create
+                    an unique Urban
+                    Jungle. Order your favorite plants!</span>
+                </p>
+                <a href="#" class="hero__btn btn">SHOP NOW</a>
+              </div>
+              <div class="hero__image">
+                <img src="src/images/hero-3.png" alt="hero" />
+              </div>
+            </li>
           </ul>
         </div>
       </section>
