--- a/index.html
+++ b/index.html
@@ -184,6 +184,65 @@
           </ul>
         </div>
       </section>
+
+      <section class="catalog">
+        <div class="catalog__container container">
+          <div class="catalog__content-aside">
+            <h4 class="catalog__content-title">Categories</h4>
+            <ul class="catalog__menu">
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  House Plants <span>(33)</span>
+                </a>
+              </li>
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  Potter Plants <span>(12)</span>
+                </a>
+              </li>
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  Seeds <span>(65)</span>
+                </a>
+              </li>
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  Small Plants <span>(39)</span>
+                </a>
+              </li>
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  Big Plants <span>(23)</span>
+                </a>
+              </li>
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  Succulents <span>(17)</span>
+                </a>
+              </li>
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  Trerrariums <span>(19)</span>
+                </a>
+              </li>
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  Gardening <span>(13)</span>
+                </a>
+              </li>
+              <li class="catalog__item">
+                <a href="#" class="catalog__content-link">
+                  Accessories <span>(18)</span>
+                </a>
+              </li>
+            </ul>
+            <h4 class="catalog__content-title">Price Range</h4>
+          </div>
+          <div class="catalog__products"></div>
+        </div>
+      </section>
+
+      <section></section>
     </main>
 
     <footer>
