--- a/index.html
+++ b/index.html
@@ -732,10 +732,163 @@
         </div>
       </section>
 
-      <section></section>
+      <section class="cards">
+        <div class="container">
+          <ul class="cards__list">
+            <li class="cards__item">
+              <img class="cards__image" src="src/images/catalog-product-5.png" alt="image" />
+              <div class="cards__data">
+                <h3 class="cards__title">
+                  Summer cactus <br>
+                  & succulents
+                </h3>
+                <p class="cards__description">
+                  We are an online plant shop offering a wide range of cheap and trendy plants
+                </p>
+                <button class="cards__btn btn">
+                  Find More
+                  <img src="src/icons/arrow-right.svg" alt="arrow" />
+                </button>
+              </div>
+            </li>
+
+            <li class="cards__item">
+              <img class="cards__image" src="src/images/catalog-product-3.png" alt="image" />
+              <div class="cards__data">
+                <h3 class="cards__title">
+                  Styling Trends <br>
+                  & much more
+                </h3>
+                <p class="cards__description">
+                  We are an online plant shop offering a wide range of cheap and trendy plants
+                </p>
+                <button class="cards__btn btn">
+                  Find More
+                  <img src="src/icons/arrow-right.svg" alt="arrow" />
+                </button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="blog">
+        <div class="container">
+          <h2 class="blog__title">Our Blog Posts</h2>
+          <p class="blog__description">
+            We are an online plant shop offering a wide range of cheap and trendy plants.
+          </p>
+
+          <ul class="blog__list">
+            <li class="blog__item">
+              <img src="src/images/blog-1.png" alt="image" class="blog__image" />
+              <div class="blog__data">
+                <p class="blog__subtitle">
+                  September 12 I Read in 6 minutes
+                </p>
+                <h4 class="blog__item-title">
+                  Cactus & Succulent
+                  Care Tips
+                </h4>
+                <p class="blog__item-description">
+                  Cacti are succulents are easy care plants for any home or patio.
+                </p>
+                <a href="#" class="blog__item-link">
+                  Read More
+                  <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.8126 8.79419H3.56258" stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                    <path
+                      d="M10.2748 4.27587C10.2748 4.27587 14.8123 6.72162 14.8123 8.79312C14.8123 10.8661 10.2748 13.3126 10.2748 13.3126"
+                      stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </a>
+              </div>
+            </li>
+
+            <li class="blog__item">
+              <img src="src/images/blog-2.png" alt="image" class="blog__image" />
+              <div class="blog__data">
+                <p class="blog__subtitle">
+                  September 13 I Read in 2 minutes
+                </p>
+                <h4 class="blog__item-title">
+                  Top 10 Succulents for
+                  Your Home
+                </h4>
+                <p class="blog__item-description">
+                  Best in hanging baskets. Prefers medium to high light.
+                </p>
+                <a href="#" class="blog__item-link">
+                  Read More
+                  <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.8126 8.79419H3.56258" stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                    <path
+                      d="M10.2748 4.27587C10.2748 4.27587 14.8123 6.72162 14.8123 8.79312C14.8123 10.8661 10.2748 13.3126 10.2748 13.3126"
+                      stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </a>
+              </div>
+            </li>
+
+            <li class="blog__item">
+              <img src="src/images/blog-3.png" alt="image" class="blog__image" />
+              <div class="blog__data">
+                <p class="blog__subtitle">
+                  September 15 I Read in 3 minutes
+                </p>
+                <h4 class="blog__item-title">
+                  Cacti & Succulent
+                  Care Tips
+                </h4>
+                <p class="blog__item-description">
+                  Cacti and succulents thrive in containers and because most are..
+                </p>
+                <a href="#" class="blog__item-link">
+                  Read More
+                  <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.8126 8.79419H3.56258" stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                    <path
+                      d="M10.2748 4.27587C10.2748 4.27587 14.8123 6.72162 14.8123 8.79312C14.8123 10.8661 10.2748 13.3126 10.2748 13.3126"
+                      stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </a>
+              </div>
+            </li>
+
+            <li class="blog__item">
+              <img src="src/images/blog-4.png" alt="image" class="blog__image" />
+              <div class="blog__data">
+                <p class="blog__subtitle">
+                  September 15 I Read in 2 minutes
+                </p>
+                <h4 class="blog__item-title">
+                  Best Houseplants
+                  Room by Room
+                </h4>
+                <p class="blog__item-description">
+                  The benefits of houseplants are endless. In addition to..
+                </p>
+                <a href="#" class="blog__item-link">
+                  Read More
+                  <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.8126 8.79419H3.56258" stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round"
+                      stroke-linejoin="round" />
+                    <path
+                      d="M10.2748 4.27587C10.2748 4.27587 14.8123 6.72162 14.8123 8.79312C14.8123 10.8661 10.2748 13.3126 10.2748 13.3126"
+                      stroke="#3D3D3D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <div class="container"></div>
     </footer>
 
