--- a/index.html
+++ b/index.html
@@ -1094,6 +1094,10 @@
             </div>
           </div>
         </div>
+
+        <p class="footer__text">
+          © 2021 GreenShop. All Rights Reserved.
+        </p>
       </div>
     </footer>
 
